@@ -32,8 +32,6 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.HttpStatus;
@@ -54,7 +52,6 @@ import java.util.Map;
 @Tag(name = "datasource")
 public class DatasourceController {
 
-    private static final Logger logger = LoggerFactory.getLogger(DatasourceController.class);
     private final DatasourceService datasourceService;
     private final GenericResourceService genericResourceService;
     private final OpenAIREDatasourceService openAIREDatasourceService;
@@ -89,7 +86,7 @@ public class DatasourceController {
         ff.addFilter("service_id", serviceId);
         List<DatasourceBundle> allDatasources = datasourceService.getAll(ff, auth).getResults();
         if (!allDatasources.isEmpty()) {
-            return new ResponseEntity<>(allDatasources.get(0).getDatasource(), HttpStatus.OK);
+            return new ResponseEntity<>(allDatasources.getFirst().getDatasource(), HttpStatus.OK);
         }
         return new ResponseEntity<>(null, HttpStatus.OK);
     }
@@ -128,7 +125,6 @@ public class DatasourceController {
     public ResponseEntity<Datasource> addDatasource(@Valid @RequestBody Datasource datasource,
                                                     @Parameter(hidden = true) Authentication auth) {
         DatasourceBundle datasourceBundle = datasourceService.add(new DatasourceBundle(datasource), auth);
-        logger.info("Added the Datasource with id '{}'", datasource.getId());
         return new ResponseEntity<>(datasourceBundle.getDatasource(), HttpStatus.CREATED);
     }
 
@@ -141,7 +137,6 @@ public class DatasourceController {
         DatasourceBundle datasourceBundle = datasourceService.get(datasource.getId());
         datasourceBundle.setDatasource(datasource);
         datasourceBundle = datasourceService.update(datasourceBundle, comment, auth);
-        logger.info("Updated the Datasource with id '{}'", datasource.getId());
         return new ResponseEntity<>(datasourceBundle.getDatasource(), HttpStatus.OK);
     }
 
@@ -155,12 +150,7 @@ public class DatasourceController {
         if (datasourceBundle == null) {
             return new ResponseEntity<>(HttpStatus.GONE);
         }
-        logger.info("Deleting Datasource: {} of the Catalogue: {}", datasourceBundle.getDatasource().getId(),
-                datasourceBundle.getDatasource().getCatalogueId());
-        // delete Datasource
         datasourceService.delete(datasourceBundle);
-        logger.info("Deleted the Datasource with id '{}' of the Catalogue '{}'",
-                datasourceBundle.getDatasource().getId(), datasourceBundle.getDatasource().getCatalogueId());
         return new ResponseEntity<>(datasourceBundle.getDatasource(), HttpStatus.OK);
     }
 
@@ -178,12 +168,7 @@ public class DatasourceController {
         if (datasourceBundle == null) {
             return new ResponseEntity<>(HttpStatus.GONE);
         }
-        logger.info("Deleting Datasource: {} of the Catalogue: {}", datasourceBundle.getDatasource().getId(),
-                datasourceBundle.getDatasource().getCatalogueId());
-        // delete Datasource
         datasourceService.delete(datasourceBundle);
-        logger.info("Deleted the Datasource with id '{}' of the Catalogue '{}'", datasourceBundle.getDatasource().getId(),
-                datasourceBundle.getDatasource().getCatalogueId());
         return new ResponseEntity<>(datasourceBundle.getDatasource(), HttpStatus.OK);
     }
 
@@ -197,7 +182,6 @@ public class DatasourceController {
                                                              @Parameter(hidden = true) Authentication auth) {
         String id = prefix + "/" + suffix;
         DatasourceBundle resource = datasourceService.verify(id, status, active, auth);
-        logger.info("Updated Datasource with id '{}' [status: {}] [active: {}]", resource.getDatasource().getId(), status, active);
         return new ResponseEntity<>(resource, HttpStatus.OK);
     }
 
