@@ -209,18 +209,10 @@ public abstract class AbstractServiceBundleManager<T extends ServiceBundle> exte
 
     @Override
     public T validate(T serviceBundle) {
-        Service service = serviceBundle.getService();
-        //If we want to reject bad vocab ids instead of silently accept, here's where we do it
-        logger.debug("Validating Resource with id: {}", service.getId());
-
-        try {
-            fieldValidator.validate(serviceBundle);
-        } catch (IllegalAccessException e) {
-            logger.error("", e);
-        }
+        logger.debug("Validating Service with id: '{}'", serviceBundle.getId());
         serviceValidator.validate(serviceBundle, null);
 
-        return serviceBundle;
+        return super.validate(serviceBundle);
     }
 
     @Override
@@ -295,7 +287,7 @@ public abstract class AbstractServiceBundleManager<T extends ServiceBundle> exte
                 .cqlQuery(String.format("resource_internal_id = \"%s\"  AND catalogue_id = \"%s\"", id, catalogueId),
                         getResourceTypeName(), maxQuantity, 0, "modifiedAt", "DESC");
         if (resources.getTotal() > 0) {
-            return resources.getResults().get(0);
+            return resources.getResults().getFirst();
         }
         return null;
     }
@@ -475,8 +467,8 @@ public abstract class AbstractServiceBundleManager<T extends ServiceBundle> exte
             }
         }
         Collections.shuffle(servicesToBeAudited);
-        for (int i = servicesToBeAudited.size() - 1; i > ff.getQuantity() - 1; i--) {
-            servicesToBeAudited.remove(i);
+        if (servicesToBeAudited.size() > ff.getQuantity()) {
+            servicesToBeAudited.subList(ff.getQuantity(), servicesToBeAudited.size()).clear();
         }
         return new Browsing<>(servicesToBeAudited.size(), 0, servicesToBeAudited.size(), servicesToBeAudited, serviceBrowsing.getFacets());
     }
