@@ -47,26 +47,26 @@ public class ConfigurationTemplateInstanceManager extends ResourceManager<Config
         implements ConfigurationTemplateInstanceService {
 
     private static final Logger logger = LoggerFactory.getLogger(ConfigurationTemplateInstanceManager.class);
-    private final ConfigurationTemplateInstanceService configurationTemplateInstanceService;
-    private final ResourceInteroperabilityRecordService resourceInteroperabilityRecordService;
+    private final ConfigurationTemplateInstanceService configInstanceService;
+    private final ResourceInteroperabilityRecordService rirService;
 
-    private final ConfigurationTemplateService configurationTemplateService;
+    private final ConfigurationTemplateService configService;
     private final SecurityService securityService;
     private final ProviderResourcesCommonMethods commonMethods;
     private final IdCreator idCreator;
 
-    public ConfigurationTemplateInstanceManager(@Lazy ConfigurationTemplateInstanceService configurationTemplateInstanceService,
-                                                @Lazy ConfigurationTemplateService configurationTemplateService,
-                                                @Lazy ResourceInteroperabilityRecordService resourceInteroperabilityRecordService,
-                                                SecurityService securityService, ProviderResourcesCommonMethods commonMethods,
-                                                IdCreator idCreator) {
+    public ConfigurationTemplateInstanceManager(@Lazy ConfigurationTemplateInstanceService configInstanceService,
+                                                @Lazy ConfigurationTemplateService configService,
+                                                @Lazy ResourceInteroperabilityRecordService rirService,
+                                                SecurityService securityService, IdCreator idCreator,
+                                                ProviderResourcesCommonMethods commonMethods) {
         super(ConfigurationTemplateInstanceBundle.class);
-        this.configurationTemplateInstanceService = configurationTemplateInstanceService;
-        this.configurationTemplateService = configurationTemplateService;
-        this.resourceInteroperabilityRecordService = resourceInteroperabilityRecordService;
+        this.configInstanceService = configInstanceService;
+        this.configService = configService;
+        this.rirService = rirService;
         this.securityService = securityService;
-        this.commonMethods = commonMethods;
         this.idCreator = idCreator;
+        this.commonMethods = commonMethods;
     }
 
     @Override
@@ -77,35 +77,36 @@ public class ConfigurationTemplateInstanceManager extends ResourceManager<Config
     // TODO: validate/add/update/delete
 
     @Override
-    public ConfigurationTemplateInstanceBundle add(ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle, Authentication auth) {
-        validate(configurationTemplateInstanceBundle);
-        checkResourceIdAndConfigurationTemplateIdConsistency(configurationTemplateInstanceBundle, auth);
+    public ConfigurationTemplateInstanceBundle add(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
+        validate(bundle);
+        checkResourceIdAndConfigurationTemplateIdConsistency(bundle, auth);
 
-        configurationTemplateInstanceBundle.setId(idCreator.generate(getResourceTypeName()));
-        logger.trace("Attempting to add a new ConfigurationTemplateInstance: {}", configurationTemplateInstanceBundle);
+        bundle.setId(idCreator.generate(getResourceTypeName()));
+        logger.trace("Attempting to add a new ConfigurationTemplateInstance: {}", bundle);
 
-        configurationTemplateInstanceBundle.setMetadata(Metadata.createMetadata(AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase()));
-        List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(configurationTemplateInstanceBundle, auth);
-        configurationTemplateInstanceBundle.setLoggingInfo(loggingInfoList);
-        configurationTemplateInstanceBundle.setLatestOnboardingInfo(loggingInfoList.get(0));
+        bundle.setMetadata(Metadata.createMetadata(AuthenticationInfo.getFullName(auth),
+                AuthenticationInfo.getEmail(auth).toLowerCase()));
+        List<LoggingInfo> list = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(bundle, auth);
+        bundle.setLoggingInfo(list);
+        bundle.setLatestOnboardingInfo(list.getFirst());
 
         // active
-        configurationTemplateInstanceBundle.setActive(true);
+        bundle.setActive(true);
 
         ConfigurationTemplateInstanceBundle ret;
-        ret = super.add(configurationTemplateInstanceBundle, null);
-        logger.debug("Adding ConfigurationTemplateInstanceBundle: {}", configurationTemplateInstanceBundle);
+        ret = super.add(bundle, null);
+        logger.info("Added Configuration Template Instance with id '{}'", ret.getId());
 
         return ret;
     }
 
     @Override
-    public ConfigurationTemplateInstanceBundle update(ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle, Authentication auth) {
-        logger.trace("Attempting to update the ConfigurationTemplateInstance with id '{}'", configurationTemplateInstanceBundle.getId());
+    public ConfigurationTemplateInstanceBundle update(ConfigurationTemplateInstanceBundle bundle, Authentication auth) {
+        logger.trace("Attempting to update the ConfigurationTemplateInstance with id '{}'", bundle.getId());
 
-        ConfigurationTemplateInstanceBundle ret = ObjectUtils.clone(configurationTemplateInstanceBundle);
-        Resource existingResource = whereID(ret.getId(), true);
-        ConfigurationTemplateInstanceBundle existingCTI = deserialize(existingResource);
+        ConfigurationTemplateInstanceBundle ret = ObjectUtils.clone(bundle);
+        Resource existing = whereID(ret.getId(), true);
+        ConfigurationTemplateInstanceBundle existingCTI = deserialize(existing);
         // check if there are actual changes in the ConfigurationTemplateInstance
         if (ret.getConfigurationTemplateInstance().equals(existingCTI.getConfigurationTemplateInstance())) {
             return ret;
@@ -118,87 +119,93 @@ public class ConfigurationTemplateInstanceManager extends ResourceManager<Config
 
         validate(ret);
 
-        ret.setMetadata(Metadata.updateMetadata(ret.getMetadata(), AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase()));
-        List<LoggingInfo> loggingInfoList = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(existingCTI, auth);
+        ret.setMetadata(Metadata.updateMetadata(
+                ret.getMetadata(), AuthenticationInfo.getFullName(auth), AuthenticationInfo.getEmail(auth).toLowerCase()));
+        List<LoggingInfo> list = commonMethods.returnLoggingInfoListAndCreateRegistrationInfoIfEmpty(existingCTI, auth);
         LoggingInfo loggingInfo = commonMethods.createLoggingInfo(auth, LoggingInfo.Types.UPDATE.getKey(),
                 LoggingInfo.ActionType.UPDATED.getKey());
-        loggingInfoList.add(loggingInfo);
-        loggingInfoList.sort(Comparator.comparing(LoggingInfo::getDate));
-        ret.setLoggingInfo(loggingInfoList);
+        list.add(loggingInfo);
+        list.sort(Comparator.comparing(LoggingInfo::getDate));
+        ret.setLoggingInfo(list);
 
         // latestUpdateInfo
         ret.setLatestUpdateInfo(loggingInfo);
 
-        existingResource.setPayload(serialize(ret));
-        existingResource.setResourceType(getResourceType());
+        existing.setPayload(serialize(ret));
+        existing.setResourceType(getResourceType());
 
         // block user from updating resourceId
-        if (!ret.getConfigurationTemplateInstance().getResourceId().equals(existingCTI.getConfigurationTemplateInstance().getResourceId())
-                && !securityService.hasRole(auth, "ROLE_ADMIN")) {
-            throw new ValidationException("You cannot change the Resource Id with which this ConfigurationTemplateInstance is related");
+        if (!ret.getConfigurationTemplateInstance().getResourceId().equals(existingCTI.getConfigurationTemplateInstance().getResourceId()) &&
+                !securityService.hasRole(auth, "ROLE_ADMIN")) {
+            throw new ValidationException("You cannot change the Resource Id with which this " +
+                    "ConfigurationTemplateInstance is related");
         }
 
         // block user from updating configurationTemplateId
-        if (!ret.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(existingCTI.getConfigurationTemplateInstance().getConfigurationTemplateId())
-                && !securityService.hasRole(auth, "ROLE_ADMIN")) {
-            throw new ValidationException("You cannot change the Configuration Template Id with which this ConfigurationTemplateInstance is related");
+        if (!ret.getConfigurationTemplateInstance().getConfigurationTemplateId()
+                .equals(existingCTI.getConfigurationTemplateInstance().getConfigurationTemplateId()) &&
+                !securityService.hasRole(auth, "ROLE_ADMIN")) {
+            throw new ValidationException("You cannot change the Configuration Template Id with which this " +
+                    "ConfigurationTemplateInstance is related");
         }
 
-        resourceService.updateResource(existingResource);
-        logger.debug("Updating ResourceInteroperabilityRecord: {}", ret);
+        resourceService.updateResource(existing);
+        logger.info("Updated Configuration Template Instance with id '{}'", bundle.getId());
 
         return ret;
     }
 
-    public void delete(ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle) {
+    @Override
+    public void delete(ConfigurationTemplateInstanceBundle bundle) {
         // block Public ConfigurationTemplateInstanceBundle deletions
-        if (configurationTemplateInstanceBundle.getMetadata().isPublished()) {
+        if (bundle.getMetadata().isPublished()) {
             throw new ValidationException("You cannot directly delete a Public Configuration Template Instance");
         }
         logger.trace("User is attempting to delete the ConfigurationTemplateInstance with id '{}'",
-                configurationTemplateInstanceBundle.getId());
-        super.delete(configurationTemplateInstanceBundle);
-        logger.debug("Deleting ConfigurationTemplateInstanceBundle: {}", configurationTemplateInstanceBundle);
-
+                bundle.getId());
+        super.delete(bundle);
+        logger.info("Deleted the Configuration Template Instance with id '{}'", bundle.getConfigurationTemplateInstance().getId());
     }
 
-    public List<ConfigurationTemplateInstance> getCTIByResourceId(String resourceId) {
+    public List<ConfigurationTemplateInstance> getByResourceId(String id) {
         List<ConfigurationTemplateInstance> ret = new ArrayList<>();
         FacetFilter ff = new FacetFilter();
         ff.setQuantity(10000);
-        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundles = configurationTemplateInstanceService.getAll(ff, null).getResults();
-        for (ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle : configurationTemplateInstanceBundles) {
-            if (configurationTemplateInstanceBundle.getConfigurationTemplateInstance().getResourceId().equals(resourceId)) {
-                ret.add(configurationTemplateInstanceBundle.getConfigurationTemplateInstance());
+        List<ConfigurationTemplateInstanceBundle> list = configInstanceService.getAll(ff, null).getResults();
+        for (ConfigurationTemplateInstanceBundle bundle : list) {
+            if (bundle.getConfigurationTemplateInstance().getResourceId().equals(id)) {
+                ret.add(bundle.getConfigurationTemplateInstance());
             }
         }
         return ret;
     }
 
-    public List<ConfigurationTemplateInstance> getCTIByConfigurationTemplateId(String configurationTemplateId) {
+    public List<ConfigurationTemplateInstance> getByConfigurationTemplateId(String id) {
         List<ConfigurationTemplateInstance> ret = new ArrayList<>();
         FacetFilter ff = new FacetFilter();
         ff.setQuantity(10000);
         ff.addFilter("published", false);
-        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundles = configurationTemplateInstanceService.getAll(ff, null).getResults();
-        for (ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle : configurationTemplateInstanceBundles) {
-            if (configurationTemplateInstanceBundle.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(configurationTemplateId)) {
-                ret.add(configurationTemplateInstanceBundle.getConfigurationTemplateInstance());
+        List<ConfigurationTemplateInstanceBundle> list = configInstanceService.getAll(ff, null).getResults();
+        for (ConfigurationTemplateInstanceBundle bundle : list) {
+            if (bundle.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(id)) {
+                ret.add(bundle.getConfigurationTemplateInstance());
             }
         }
         return ret;
     }
 
-    private void checkResourceIdAndConfigurationTemplateIdConsistency(ConfigurationTemplateInstanceBundle configurationTemplateInstanceBundle, Authentication auth) {
-        String resourceId = configurationTemplateInstanceBundle.getConfigurationTemplateInstance().getResourceId();
-        String configurationTemplateId = configurationTemplateInstanceBundle.getConfigurationTemplateInstance().getConfigurationTemplateId();
+    private void checkResourceIdAndConfigurationTemplateIdConsistency(ConfigurationTemplateInstanceBundle bundle,
+                                                                      Authentication auth) {
+        String resourceId = bundle.getConfigurationTemplateInstance().getResourceId();
+        String configurationTemplateId = bundle.getConfigurationTemplateInstance().getConfigurationTemplateId();
         // check if the configuration template ID is related to the resource ID
         boolean found = false;
-        List<ResourceInteroperabilityRecordBundle> resourceInteroperabilityRecordBundleList = resourceInteroperabilityRecordService.getAll(createFacetFilter(), auth).getResults();
-        for (ResourceInteroperabilityRecordBundle resourceInteroperabilityRecordBundle : resourceInteroperabilityRecordBundleList) {
-            if (resourceInteroperabilityRecordBundle.getResourceInteroperabilityRecord().getResourceId().equals(resourceId)) {
-                ConfigurationTemplateBundle configurationTemplateBundle = configurationTemplateService.get(configurationTemplateId);
-                if (resourceInteroperabilityRecordBundle.getResourceInteroperabilityRecord().getInteroperabilityRecordIds().contains(configurationTemplateBundle.getConfigurationTemplate().getInteroperabilityRecordId())) {
+        List<ResourceInteroperabilityRecordBundle> list = rirService.getAll(createFacetFilter(), auth).getResults();
+        for (ResourceInteroperabilityRecordBundle rirBundle : list) {
+            if (rirBundle.getResourceInteroperabilityRecord().getResourceId().equals(resourceId)) {
+                ConfigurationTemplateBundle ctBundle = configService.get(configurationTemplateId);
+                if (rirBundle.getResourceInteroperabilityRecord().getInteroperabilityRecordIds()
+                        .contains(ctBundle.getConfigurationTemplate().getInteroperabilityRecordId())) {
                     found = true;
                     break;
                 }
@@ -209,12 +216,13 @@ public class ConfigurationTemplateInstanceManager extends ResourceManager<Config
         }
 
         // check if a Configuration Template Implementation with the same resourceId, configurationTemplateId and payload already exists
-        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundleList = configurationTemplateInstanceService.getAll(createFacetFilter(), auth).getResults();
+        List<ConfigurationTemplateInstanceBundle> configurationTemplateInstanceBundleList = configInstanceService.getAll(createFacetFilter(), auth).getResults();
         for (ConfigurationTemplateInstanceBundle ctiBundle : configurationTemplateInstanceBundleList) {
             if (ctiBundle.getConfigurationTemplateInstance().getResourceId().equals(resourceId) &&
                     ctiBundle.getConfigurationTemplateInstance().getConfigurationTemplateId().equals(configurationTemplateId) &&
-                    ctiBundle.getConfigurationTemplateInstance().getPayload().equals(configurationTemplateInstanceBundle.getConfigurationTemplateInstance().getPayload())) {
-                throw new ValidationException(String.format("There is already a Configuration Template Instance registered for Resource [%s] under [%s] Configuration Template with the same payload",
+                    ctiBundle.getConfigurationTemplateInstance().getPayload().equals(bundle.getConfigurationTemplateInstance().getPayload())) {
+                throw new ValidationException(String.format("There is already a Configuration Template Instance registered " +
+                                "for Resource [%s] under [%s] Configuration Template with the same payload",
                         resourceId, configurationTemplateId));
             }
         }
