@@ -23,6 +23,7 @@ import gr.uoa.di.madgik.registry.service.SearchService;
 import gr.uoa.di.madgik.resourcecatalogue.domain.HelpdeskBundle;
 import gr.uoa.di.madgik.resourcecatalogue.domain.LoggingInfo;
 import gr.uoa.di.madgik.resourcecatalogue.domain.Metadata;
+import gr.uoa.di.madgik.resourcecatalogue.domain.ServiceBundle;
 import gr.uoa.di.madgik.resourcecatalogue.service.*;
 import gr.uoa.di.madgik.resourcecatalogue.utils.AuthenticationInfo;
 import gr.uoa.di.madgik.resourcecatalogue.utils.ObjectUtils;
@@ -39,7 +40,7 @@ import java.util.List;
 public class HelpdeskManager extends ResourceManager<HelpdeskBundle> implements HelpdeskService {
 
     private static final Logger logger = LoggerFactory.getLogger(HelpdeskManager.class);
-    private final ServiceBundleService serviceBundleService;
+    private final ServiceBundleService<ServiceBundle> serviceBundleService;
     private final TrainingResourceService trainingResourceService;
     private final PublicHelpdeskManager publicHelpdeskManager;
     private final SecurityService securityService;
@@ -47,7 +48,7 @@ public class HelpdeskManager extends ResourceManager<HelpdeskBundle> implements 
     private final ProviderResourcesCommonMethods commonMethods;
     private final IdCreator idCreator;
 
-    public HelpdeskManager(ServiceBundleService serviceBundleService,
+    public HelpdeskManager(ServiceBundleService<ServiceBundle> serviceBundleService,
                            TrainingResourceService trainingResourceService,
                            PublicHelpdeskManager publicHelpdeskManager,
                            @Lazy SecurityService securityService,
@@ -103,10 +104,10 @@ public class HelpdeskManager extends ResourceManager<HelpdeskBundle> implements 
         helpdesk.setLoggingInfo(loggingInfoList);
         helpdesk.setActive(true);
         // latestOnboardingInfo
-        helpdesk.setLatestOnboardingInfo(loggingInfoList.get(0));
+        helpdesk.setLatestOnboardingInfo(loggingInfoList.getFirst());
 
         super.add(helpdesk, null);
-        logger.debug("Adding Helpdesk: {}", helpdesk);
+        logger.info("Added Helpdesk with id '{}'", helpdesk.getId());
 
         registrationMailService.sendEmailsForHelpdeskExtensionToPortalAdmins(helpdesk, "post");
 
@@ -154,7 +155,7 @@ public class HelpdeskManager extends ResourceManager<HelpdeskBundle> implements 
         }
 
         resourceService.updateResource(existingResource);
-        logger.debug("Updating Helpdesk: {}", ret);
+        logger.info("Updated Helpdesk with id '{}'", ret.getId());
 
         registrationMailService.sendEmailsForHelpdeskExtensionToPortalAdmins(ret, "put");
 
@@ -180,10 +181,15 @@ public class HelpdeskManager extends ResourceManager<HelpdeskBundle> implements 
     @Override
     public void delete(HelpdeskBundle helpdesk) {
         super.delete(helpdesk);
-        logger.debug("Deleting Helpdesk: {}", helpdesk);
+        logger.info("Deleted Helpdesk with id '{}' of the Catalogue '{}'",
+                helpdesk.getHelpdesk().getId(), helpdesk.getCatalogueId());
     }
 
     public HelpdeskBundle createPublicResource(HelpdeskBundle helpdeskBundle, Authentication auth) {
+        logger.info("User '{}-{}' attempts to create a Public Helpdesk from Helpdesk '{}' of the '{}' Catalogue",
+                AuthenticationInfo.getFullName(auth),
+                AuthenticationInfo.getEmail(auth).toLowerCase(),
+                helpdeskBundle.getId(), helpdeskBundle.getCatalogueId());
         publicHelpdeskManager.add(helpdeskBundle, auth);
         return helpdeskBundle;
     }
